<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Collection">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/baseline_favorite_24"
        android:drawablePadding="10dp"
        android:text="@string/my_collection"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#98B6B1"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_view_clothing"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_shopping_cart_24" />

        <TextView
            android:id="@+id/text_view_name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/clothing_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_price1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/price"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:background="#D7BCC8"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_view_clothing11"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_shopping_cart_24" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/clothing_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/price"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:background="#629677"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_view_clothing3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_shopping_cart_24" />

        <TextView
            android:id="@+id/text_view_name3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/clothing_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_price3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/price"
            android:textSize="14sp" />
    </LinearLayout>

</FrameLayout>